--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/del": "^4.0.0",
     "browser-sync": "^2.23.6",
     "cssmin": "^0.4.3",
+    "del": "^3.0.0",
     "grunt": "^1.0.2",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-clean": "^1.1.0",
@@ -35,7 +37,14 @@
     "grunt-sass": "^2.1.0",
     "grunt-usemin": "^3.1.1",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-flatmap": "^1.0.2",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-rev": "^8.1.1",
     "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-usemin": "^0.3.30",
     "htmlmin": "0.0.7",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
@@ -49,11 +58,11 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "jit-grunt": "^0.10.0",
-    "time-grunt": "^1.4.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "jit-grunt": "^0.10.0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "time-grunt": "^1.4.0"
   }
 }
